2007-07-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/plugindata.h, src/plugins.c:
   Apply patch from Jeff Pohlmeyer to add plugin functions for getting
   a file list and modifying scintilla text selections (thanks).
 * src/document.c:
   Fix hang when replacing all '[ ]*' regex matches (closes #1757748).


2007-07-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * Makefile.am, doc/Makefile.am, icons/Makefile.am, plugins/Makefile.am,
   scintilla/include/Makefile.am, src/Makefile.am:
   Fix make distcheck.


2007-07-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * plugins/htmlchars.c, plugins/Makefile.am, src/interface.c,
   src/keybindings.c, src/tools.c, src/tools.h, src/plugindata.h,
   src/callbacks.c, src/callbacks.h, src/plugins.c, src/plugins.h,
   src/ui_utils.c, HACKING, geany.glade:
   Convert 'Insert Special HTML Characters' tool into a plugin;
   keybinding support will be added later.
   Add plugin functions for inserting text into the current document.
   Add plugin support for disabling a menu item when no documents are
   open.
   Destroy plugin_fields->menu_item on unloading if set by a plugin.
   Use G_MODULE_BIND_LOCAL for plugins to prevent symbol shadowing by
   other modules, and to help detect unresolved symbols at loading time.
 * plugins/htmlchars.c:
   Fix warning.


2007-07-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/symbols.c: Adjust symbol list icon path on Windows.


2007-07-22  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/symbols.c, src/treeviews.c, src/treeviews.h, src/utils.c,
   src/utils.h:
   Extend icon search path to get symbol list icons working when using
   a non-standard installation prefix.
   Query default icon theme only once to improve startup speed.
   Store the line number separately in the tree store.
   Remove utils_get_local_tag().
 * data/filetypes.common: Clarified description of white_space setting.


2007-07-20  Frank Lanitz  <frank@frank.uvena.de>
