@@ -1,3 +1,9 @@
+2007-07-25  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * src/document.c:
+   Fix wrong selection handling when using Color Chooser.
+
+
 2007-07-24  Nick Treleaven  <nick.treleaven@btinternet.com>
 
  * src/plugindata.h, src/plugins.c:
